# hands

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  time_log.md
.github/workflows/: docs.yml
docs/: contributing.md  goals.md  index.md
docs/best-practices/: code-quality.md  strategy.md
docs/examples/: cross-platform.md
docs/getting-started/: installation.md  quick-start.md
docs/javascripts/: mathjax.js
docs/reference/: api.md  configuration.md
docs/stylesheets/: extra.css
docs/tools/: e2e-testing.md  integration-testing.md  overview.md  unit-testing.md
