[project]
name = "hands"
version = "2025.0.1"
description = "Overview of the testing tools."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material>=9.6.19",
    "mkdocs-minify-plugin>=0.8.0",
    "mike>=2.1.3",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.6.19",
    "mkdocs-minify-plugin>=0.8.0",
    "mike>=2.1.3",
]

[tool.mkdocs]
config-file = "mkdocs.yml"
